--- a/main.tex
+++ b/main.tex
@@ -30,6 +30,7 @@
 \usepackage{enumerate}
 \usepackage{braket}
 \usepackage{blindtext}
+\usepackage{enumitem}
 \subimport{includes/}{def.tex}
 
 \title{Izomorfizm Curry'ego-Howarda}
