--- a/includes/def.tex
+++ b/includes/def.tex
@@ -11,6 +11,7 @@
 \theoremstyle{theorem}
 \newtheorem{twierdzenie}{Twierdzenie}
 \newtheorem{lemat}{Lemat}
+\newtheorem{fakt}{Fakt}
 \theoremstyle{remark}
 \newtheorem{uwaga}{Uwaga}
 \newtheorem{wniosek}{Wniosek}
