--- a/main.tex
+++ b/main.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper,oneside,reqno,10pt]{article}
-\usepackage[a4paper,left=4cm,right=3cm,top=3cm,bottom=3cm,head=0cm,headsep=0cm]{geometry}
+%\usepackage[a4paper,left=4cm,right=3cm,top=3cm,bottom=3cm,head=0cm,headsep=0cm]{geometry}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
@@ -41,7 +41,7 @@
 \maketitle
 \subimport{includes/chapters/}{ipc.tex}
 \subimport{includes/chapters/}{simpletypes.tex}
-\bibliographystyle{unsrt}
-\bibliography{bibdb}
+% \bibliographystyle{unsrt}
+% \bibliography{bibdb}
 %\printbibliography
 \end{document}
