--- a/main.tex
+++ b/main.tex
@@ -39,7 +39,7 @@
 
 \begin{document}
 \maketitle
-\subimport{includes/chapters/}{ipc.tex}
+%\subimport{includes/chapters/}{ipc.tex}
 \subimport{includes/chapters/}{simpletypes.tex}
 % \bibliographystyle{unsrt}
 % \bibliography{bibdb}
