--- a/includes/def.tex
+++ b/includes/def.tex
@@ -14,6 +14,7 @@
 \newtheorem{fakt}{Fakt}
 \theoremstyle{remark}
 \newtheorem{uwaga}{Uwaga}
+\newtheorem*{uwaga*}{Uwaga}
 \newtheorem{wniosek}{Wniosek}
 \theoremstyle{plain}
 \newtheorem{konwencja}{Konwencja}
