--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,7 @@
 \usepackage{tikz-cd}
 \usepackage{tikz}
 \usetikzlibrary{matrix}
+\usepackage{indentfirst}
 \usepackage{multicol}
 \usepackage{pdfpages}
 \usepackage{import}
