--- a/includes/def.tex
+++ b/includes/def.tex
@@ -7,7 +7,6 @@
 \theoremstyle{definition} 
 \newtheorem{przyklad}{Przykład}
 \newtheorem{definicja}{Definicja}
-\newtheorem{dowod}{Dowód:}
 \theoremstyle{theorem}
 \newtheorem{twierdzenie}{Twierdzenie}
 \newtheorem{lemat}{Lemat}
@@ -19,6 +18,7 @@
 \theoremstyle{plain}
 \newtheorem{konwencja}{Konwencja}
 \newtheorem*{konwencja*}{Konwencja}
+\newtheorem*{dowod}{Dowód}
 
 \newcommand{\R}{\mathbb{R}}
 
