--- a/includes/def.tex
+++ b/includes/def.tex
@@ -1,3 +1,6 @@
+\ListProperties(Hide=100, Hang=true, Progressive=3ex, Style*=-- ,
+Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
+
 %\setlist[enumerate]{itemsep=-1mm}
 %\DeclareGraphicsExtensions{.eps}
 \DeclareUnicodeCharacter{00A0}{ }
