--- a/main.tex
+++ b/main.tex
@@ -32,14 +32,15 @@
 \usepackage{braket}
 \usepackage{blindtext}
 \usepackage{enumitem}
+\usepackage[ampersand]{easylist} 
 \subimport{includes/}{def.tex}
 
-\title{Izomorfizm Curry'ego-Howarda}
-\date{2018\\ Październik}
-\author{Rafał Szczerski} 
+%\title{Izomorfizm Curry'ego-Howarda}
+%\date{2018\\ Październik}
+%\author{Rafał Szczerski} 
 
 \begin{document}
-\maketitle
+%\maketitle
 %\subimport{includes/chapters/}{ipc.tex}
 \subimport{includes/chapters/}{simpletypes.tex}
 % \bibliographystyle{unsrt}
