--- a/bibdb.bib
+++ b/bibdb.bib
@@ -1,4 +1,4 @@
-@book{Sorensen:2006:LCI:1197021,
+@book{Urzyczyn2006,
  author = {S{\o}rensen, Morten Heine and Urzyczyn, Pawel},
  title = {Lectures on the Curry-Howard Isomorphism, Volume 149 (Studies in Logic and the Foundations of Mathematics)},
  year = {2006},
@@ -6,4 +6,11 @@
  publisher = {Elsevier Science Inc.},
  address = {New York, NY, USA},
 } 
+
+@book{Hindley1986,
+	year = {1986},
+	publisher = {Cambridge University Press},
+	author = {J. Roger Hindley},
+	title = {Introduction to Combinators and [Lambda]-Calculus}
+}
 
