--- a/includes/def.tex
+++ b/includes/def.tex
@@ -3,7 +3,7 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 
 %\setlist[enumerate]{itemsep=-1mm}
 %\DeclareGraphicsExtensions{.eps}
-\DeclareUnicodeCharacter{00A0}{ }
+%\DeclareUnicodeCharacter{00A0}{ }
 %\linespread{1.025}
 \pagestyle{plain}
 
@@ -30,3 +30,4 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
         {{\textstyle\wedge}}%
             {{\scriptstyle\wedge}}}
 
+\renewcommand\bibname{Literatura}
