Wstęp, drobne redakcje

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -1,3 +1,7 @@
+@book{barendregt_dekkers_statman_2013, place={Cambridge}, series={Perspectives in Logic}, title={Lambda Calculus with Types}, DOI={10.1017/CBO9781139032636}, publisher={Cambridge University Press}, author={Barendregt, Henk and Dekkers, Wil and Statman, Richard}, year={2013}, collection={Perspectives in Logic}}
+
+@article{barendregt_1991, title={Introduction to generalized type systems}, volume={1}, DOI={10.1017/S0956796800020025}, number={2}, journal={Journal of Functional Programming}, publisher={Cambridge University Press}, author={Barendregt, Henk}, year={1991}, pages={125–154}}
+
 @book{Urzyczyn2006,
  author = {S{\o}rensen, Morten Heine and Urzyczyn, Pawel},
  title = {Lectures on the Curry-Howard Isomorphism, Volume 149 (Studies in Logic and the Foundations of Mathematics)},
@@ -7,13 +11,16 @@
  address = {New York, NY, USA},
 } 
 
-@book{Hindley1986,
-	year = {1986},
-	publisher = {Cambridge University Press},
-	author = {J. Roger Hindley},
-	title = {Introduction to Combinators and [Lambda]-Calculus}
-}
 
+@book{Hindley:2008:LCI:1388400,
+ author = {Hindley, J. Roger and Seldin, Jonathan P.},
+ title = {Lambda-Calculus and Combinators: An Introduction},
+ year = {2008},
+ isbn = {0521898854, 9780521898850},
+ edition = {2},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
 @inproceedings{Wadler1989,
  author = {Wadler, Philip},
  title = {Theorems for Free!},
@@ -30,3 +37,22 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 }
+
+@article{Wadler:2015:PT:2847579.2699407,
+ author = {Wadler, Philip},
+ title = {Propositions As Types},
+ journal = {Commun. ACM},
+ issue_date = {December 2015},
+ volume = {58},
+ number = {12},
+ month = nov,
+ year = {2015},
+ issn = {0001-0782},
+ pages = {75--84},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2699407},
+ doi = {10.1145/2699407},
+ acmid = {2699407},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
