--- a/bibdb.bib
+++ b/bibdb.bib
@@ -56,3 +56,12 @@
  publisher = {ACM},
  address = {New York, NY, USA},
 } 
+
+@book{PeytonJones:1987:IFP:1096899,
+ author = {Peyton Jones, Simon L.},
+ title = {The Implementation of Functional Programming Languages (Prentice-Hall International Series in Computer Science)},
+ year = {1987},
+ isbn = {013453333X},
+ publisher = {Prentice-Hall, Inc.},
+ address = {Upper Saddle River, NJ, USA},
+}
