--- a/includes/def.tex
+++ b/includes/def.tex
@@ -30,3 +30,6 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
         {{\textstyle\wedge}}%
             {{\scriptstyle\wedge}}}
 
+\newcommand{\SubItem}[1]{
+    {\setlength\itemindent{15pt} \item[-] #1}
+}
