Two structural proofs

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -65,3 +65,18 @@
  publisher = {Prentice-Hall, Inc.},
  address = {Upper Saddle River, NJ, USA},
 }
+
+@article{DBLP:journals/corr/abs-1303-5039,
+  author    = {George Cherevichenko},
+  title     = {New definitions of contexts and free variables for lambda-calculi
+               with explicit substitutions},
+  journal   = {CoRR},
+  volume    = {abs/1303.5039},
+  year      = {2013},
+  url       = {http://arxiv.org/abs/1303.5039},
+  archivePrefix = {arXiv},
+  eprint    = {1303.5039},
+  timestamp = {Mon, 13 Aug 2018 16:48:54 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1303-5039},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
