Hindley's substitution, extensive comment on substitution

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -80,3 +80,14 @@
   biburl    = {https://dblp.org/rec/bib/journals/corr/abs-1303-5039},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
+
+@article{deBruijnIndices,
+author = {de Bruijn, N.G.},
+year = {1972},
+month = {12},
+pages = {381-392},
+title = {Lambda Calculus Notation with Nameless Dummies, a Tool for Automatic Formula Manipulation, with Application to the Church-Rosser Theorem},
+volume = {75},
+journal = {Indagationes Mathematicae (Proceedings)},
+doi = {10.1016/1385-7258(72)90034-0}
+}
