more on substitution

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -91,3 +91,28 @@ volume = {75},
 journal = {Indagationes Mathematicae (Proceedings)},
 doi = {10.1016/1385-7258(72)90034-0}
 }
+
+@Unpublished{txa:alpha-draft,
+  author = 	 {Thorsten Altenkirch},
+  title = 	 {$\alpha$-conversion is easy},
+  note = 	 {Under Revision},
+  url = {https://www.cs.nott.ac.uk/~psztxa/publ/alpha-draft.pdf},
+  OPTkey = 	 {},
+  OPTmonth = 	 {},
+  year =	 {2002},
+  OPTannote = 	 {}
+}
+
+@article{STOUGHTON1988317,
+title = "Substitution revisited",
+journal = "Theoretical Computer Science",
+volume = "59",
+number = "3",
+pages = "317 - 325",
+year = "1988",
+issn = "0304-3975",
+doi = "https://doi.org/10.1016/0304-3975(88)90149-1",
+url = "http://www.sciencedirect.com/science/article/pii/0304397588901491",
+author = "Allen Stoughton",
+abstract = "A definition of simultaneous substitution for the lambda calculus is presented that is easier to work with than standard single substitution because it is a definition by structural recursion, instead of recursion on the length of terms, and bound variables are always renamed. As a result, many proofs involving substitution are by structural induction, instead of induction on the length of terms, and are simpler than the corresponding standard proofs because of the reduction in the number of cases that must be considered. Furthermore, because of the uniform renaming of bound variables, identity substitutions normalize terms with respect to equivalence up to the renaming of bound variables (α-congruence), allowing induction-free proofs of some theorems that ordinarily would be proved by induction on the relation of α-congruence. A series of results relating simultaneous substitution and α-congruence are proved, and a simple proof of the “substitution lemma” of denotational semantics is given."
+}
