--- a/bibdb.bib
+++ b/bibdb.bib
@@ -116,3 +116,55 @@ url = "http://www.sciencedirect.com/science/article/pii/0304397588901491",
 author = "Allen Stoughton",
 abstract = "A definition of simultaneous substitution for the lambda calculus is presented that is easier to work with than standard single substitution because it is a definition by structural recursion, instead of recursion on the length of terms, and bound variables are always renamed. As a result, many proofs involving substitution are by structural induction, instead of induction on the length of terms, and are simpler than the corresponding standard proofs because of the reduction in the number of cases that must be considered. Furthermore, because of the uniform renaming of bound variables, identity substitutions normalize terms with respect to equivalence up to the renaming of bound variables (α-congruence), allowing induction-free proofs of some theorems that ordinarily would be proved by induction on the relation of α-congruence. A series of results relating simultaneous substitution and α-congruence are proved, and a simple proof of the “substitution lemma” of denotational semantics is given."
 }
+
+@inproceedings{Koopman:2014:CED:2746325.2746330,
+ author = {Koopman, Pieter and Plasmeijer, Rinus and Jansen, Jan Martin},
+ title = {Church Encoding of Data Types Considered Harmful for Implementations: Functional Pearl},
+ booktitle = {Proceedings of the 26Nd 2014 International Symposium on Implementation and Application of Functional Languages},
+ series = {IFL '14},
+ year = {2014},
+ isbn = {978-1-4503-3284-2},
+ location = {Boston, MA, USA},
+ pages = {4:1--4:12},
+ articleno = {4},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2746325.2746330},
+ doi = {10.1145/2746325.2746330},
+ acmid = {2746330},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Church Numbers, Data Types, Implementation, Parigot Encoding, Scott Encoding},
+}
+
+@techreport{Sussman:1975:IEL:889230,
+ author = {Sussman, Gerald J. and Steele,Jr., Guy L.},
+ title = {An Interpreter for Extended Lambda Calculus},
+ year = {1975},
+ source = {http://www.ncstrl.org:8900/ncstrl/servlet/search?formname=detail\&id=oai%3Ancstrlh%3Amitai%3AMIT-AILab%2F%2FAIM-349},
+ publisher = {Massachusetts Institute of Technology},
+ address = {Cambridge, MA, USA},
+}
+
+@book{PeytonJones:1992:IFL:129390,
+ author = {Peyton Jones, Simon L. and Lester, David R.},
+ title = {Implementing Functional Languages},
+ year = {1992},
+ isbn = {0-13-721952-0},
+ publisher = {Prentice-Hall, Inc.},
+ address = {Upper Saddle River, NJ, USA},
+} 
+
+@inproceedings{Jansen:2013:P9C:2941698.2941710,
+ author = {Jansen, Jan Martin},
+ title = {Programming in the \(\lambda\)-Calculus: From Church to Scott and Back},
+ booktitle = {Essays Dedicated to Rinus Plasmeijer on the Occasion of His 61st Birthday on The Beauty of Functional Code - Volume 8106},
+ year = {2013},
+ isbn = {978-3-642-40354-5},
+ pages = {168--180},
+ numpages = {13},
+ url = {https://doi.org/10.1007/978-3-642-40355-2_12},
+ doi = {10.1007/978-3-642-40355-2_12},
+ acmid = {2941710},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+}
