--- a/bibdb.bib
+++ b/bibdb.bib
@@ -168,3 +168,22 @@ abstract = "A definition of simultaneous substitution for the lambda calculus is
  publisher = {Springer-Verlag},
  address = {Berlin, Heidelberg},
 }
+
+@article{Hinze:2005:TPC:1037118.1037121,
+ author = {Hinze, Ralf},
+ title = {THEORETICAL PEARL Church Numerals, Twice!},
+ journal = {J. Funct. Program.},
+ issue_date = {January 2005},
+ volume = {15},
+ number = {1},
+ month = jan,
+ year = {2005},
+ issn = {0956-7968},
+ pages = {1--13},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1017/S0956796804005313},
+ doi = {10.1017/S0956796804005313},
+ acmid = {1037121},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
