More on fold and Church numerals

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -187,3 +187,39 @@ abstract = "A definition of simultaneous substitution for the lambda calculus is
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
 } 
+i@article{hinze_2005, title={THEORETICAL PEARL Church numerals, twice!}, volume={15}, DOI={10.1017/S0956796804005313}, number={1}, journal={Journal of Functional Programming}, publisher={Cambridge University Press}, author={HINZE, RALF}, year={2005}, pages={1–13}}
+
+@book{Church1941-CHUTCO-7,
+	author = {Alonzo Church},
+	year = {1941},
+	title = {The Calculi of Lambda-Conversion},
+	publisher = {Princeton University Press}
+}
+
+@article{Hutton:1999:TUE:968578.968579,
+ author = {Hutton, Graham},
+ title = {A Tutorial on the Universality and Expressiveness of Fold},
+ journal = {J. Funct. Program.},
+ issue_date = {July 1999},
+ volume = {9},
+ number = {4},
+ month = jul,
+ year = {1999},
+ issn = {0956-7968},
+ pages = {355--372},
+ numpages = {18},
+ url = {http://dx.doi.org/10.1017/S0956796899003500},
+ doi = {10.1017/S0956796899003500},
+ acmid = {968579},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+}
+
+@inproceedings{Jensen_2006,
+  author = {Jansen, Jan Martin and Koopman, Pieter and Plasmeijer, Rinus},
+  year = {2006},
+  month = {01},
+  pages = {73-90},
+  title = {Efficient Interpretation by Transforming Data Types and Patterns to Functions},
+  journal = {Grana}
+}
