--- a/main.tex
+++ b/main.tex
@@ -42,6 +42,7 @@
 \usepackage[ampersand]{easylist} 
 \usepackage{mathbbol}
 \usepackage[outputdir=temp]{minted}
+\usepackage{wrapfig}
 
 \DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
 % \usepackage{listings}
@@ -62,7 +63,8 @@
 
 \begin{document}
 %\maketitle
-\subimport{includes/chapters/}{untyped.tex}
+\subimport{includes/chapters/}{newman_lemma.tex}
+%\subimport{includes/chapters/}{untyped.tex}
 %\subimport{includes/chapters/}{pure_type_systems.tex}
 %\subimport{includes/chapters/}{ipc.tex}
 %\subimport{includes/chapters/}{simpletypes.tex}
