--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,6 @@
 \usepackage{float}
 \usepackage{epstopdf}
 \usepackage{caption}
-\usepackage{subcaption}
 \usepackage{color}
 \usepackage{url}
 \usepackage{tikz-cd}
@@ -43,6 +42,7 @@
 \usepackage{mathbbol}
 \usepackage[outputdir=temp]{minted}
 \usepackage{wrapfig}
+\usepackage{subfig}
 
 \DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
 % \usepackage{listings}
