--- a/main.tex
+++ b/main.tex
@@ -63,8 +63,7 @@
 
 \begin{document}
 %\maketitle
-\subimport{includes/chapters/}{newman_lemma.tex}
-%\subimport{includes/chapters/}{untyped.tex}
+\subimport{includes/chapters/}{untyped.tex}
 %\subimport{includes/chapters/}{pure_type_systems.tex}
 %\subimport{includes/chapters/}{ipc.tex}
 %\subimport{includes/chapters/}{simpletypes.tex}
