Church-Rosser theorem

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -11,7 +11,6 @@
  address = {New York, NY, USA},
 } 
 
-
 @book{Hindley:2008:LCI:1388400,
  author = {Hindley, J. Roger and Seldin, Jonathan P.},
  title = {Lambda-Calculus and Combinators: An Introduction},
@@ -222,4 +221,14 @@ i@article{hinze_2005, title={THEORETICAL PEARL Church numerals, twice!}, volume=
   pages = {73-90},
   title = {Efficient Interpretation by Transforming Data Types and Patterns to Functions},
   journal = {Grana}
+}
+
+@inbook{Barendregt_1992,
+author = {Barendregt, Henk (Hendrik},
+year = {1992},
+month = {01},
+pages = {117-309},
+title = {Lambda Calculi with Types},
+volume = {2},
+isbn = {0198537611}
 }
