Strong normalization draft

--- a/main.tex
+++ b/main.tex
@@ -43,6 +43,7 @@
 \usepackage[outputdir=temp]{minted}
 \usepackage{wrapfig}
 \usepackage{subfig}
+\usepackage{stmaryrd}
 
 \DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
 % \usepackage{listings}
