Examples for context

--- a/main.tex
+++ b/main.tex
@@ -64,7 +64,7 @@
 
 \begin{document}
 %\maketitle
-%\subimport{includes/chapters/}{untyped.tex}
+\subimport{includes/chapters/}{untyped.tex}
 %\subimport{includes/chapters/}{pure_type_systems.tex}
 %\subimport{includes/chapters/}{ipc.tex}
 \subimport{includes/chapters/}{simple_types2.tex}
