substitution lemma proof

--- a/includes/def.tex
+++ b/includes/def.tex
@@ -34,6 +34,8 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
     {\setlength\itemindent{15pt} \item[-] #1}
 }
 
+\newcommand{\concat}{\ensuremath{+\!\!\!\!+\,}}
+
 \newtheorem{innercustomdef}{Definicja}
 \newenvironment{customdef}[1]
   {\renewcommand\theinnercustomdef{#1}\innercustomdef}
