--- a/bibdb.bib
+++ b/bibdb.bib
@@ -224,7 +224,7 @@ i@article{hinze_2005, title={THEORETICAL PEARL Church numerals, twice!}, volume=
 }
 
 @inbook{Barendregt_1992,
-author = {Barendregt, Henk (Hendrik},
+author = {H. P. Barendregt},
 year = {1992},
 month = {01},
 pages = {117-309},
@@ -232,3 +232,28 @@ title = {Lambda Calculi with Types},
 volume = {2},
 isbn = {0198537611}
 }
+
+@book{Barendregt_1984,
+	year = {1984},
+	author = {H. P. Barendregt},
+	title = {The Lambda Calculus: Its Syntax and Semantics},
+	publisher = {Elsevier}
+}
+
+@ARTICLE{Wells_98,
+title = "Typability and type checking in system F are equivalent and undecidable",
+abstract = "Girard and Reynolds independently invented System F (a.k.a. the second-order polymorphically typed lambda calculus) to handle problems in logic and computer programming language design, respectively. Viewing F in the Curry style, which associates types with untyped lambda terms, raises the questions of typability and type checking. Typability asks for a term whether there exists some type it can be given. Type checking asks, for a particular term and type, whether the term can be given that type. The decidability of these problems has been settled for restrictions and extensions of F and related systems and complexity lower-bounds have been determined for typability in F, but this report is the first to resolve whether these problems are decidable for System F. This report proves that type checking in F is undecidable, by a reduction from semi-unification, and that typability in F is undecidable, by a reduction from type checking. Because there is an easy reduction from typability to type checking, the two problems are equivalent. The reduction from type checking to typability uses a novel method of constructing lambda terms that simulate arbitrarily chosen type environments. All of the results also hold for the ?I-calculus. {\circledC} 1999 Published by Elsevier Science B.V. All rights reserved.",
+keywords = "Lambda calculus, Semi-unification, System f, Typability, Type checking, Type inference",
+author = "Wells, {J. B.}",
+year = "1999",
+month = "6",
+day = "30",
+language = "English",
+volume = "98",
+pages = "111--156",
+journal = "Annals of Pure and Applied Logic",
+issn = "0168-0072",
+publisher = "Elsevier",
+number = "1-3",
+}
+
