--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@
 \usepackage{wrapfig}
 \usepackage{subfig}
 \usepackage{stmaryrd}
+%\usepackage{cite}
 
 \DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
 % \usepackage{listings}
@@ -68,6 +69,7 @@
 %\subimport{includes/chapters/}{pure_type_systems.tex}
 %\subimport{includes/chapters/}{ipc.tex}
 \subimport{includes/chapters/}{simple_types2.tex}
+\subimport{includes/chapters/}{strong_normalization.tex}
 %\subimport{includes/chapters/}{denotational_semantics.tex}
 %\bibliographystyle{alpha}
 
