--- a/bibdb.bib
+++ b/bibdb.bib
@@ -257,3 +257,28 @@ publisher = "Elsevier",
 number = "1-3",
 }
 
+@article{DBLP:journals/corr/abs-cs-0701022,
+  author    = {Mateusz Zakrzewski},
+  title     = {Definable functions in the simply typed lambda-calculus},
+  journal   = {CoRR},
+  volume    = {abs/cs/0701022},
+  year      = {2007},
+  url       = {http://arxiv.org/abs/cs/0701022},
+  archivePrefix = {arXiv},
+  eprint    = {cs/0701022},
+  timestamp = {Mon, 13 Aug 2018 16:47:41 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-cs-0701022},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@article{Tait67,
+	doi = {10.2307/2271658},
+	year = {1967},
+	number = {2},
+	volume = {32},
+	publisher = {Association for Symbolic Logic},
+	pages = {198--212},
+	title = {Intensional Interpretations of Functionals of Finite Type I},
+	author = {W. W. Tait},
+	journal = {Journal of Symbolic Logic}
+}
