--- a/bibdb.bib
+++ b/bibdb.bib
@@ -282,3 +282,5 @@ number = "1-3",
 	author = {W. W. Tait},
 	journal = {Journal of Symbolic Logic}
 }
+
+@book{nederpelt_geuvers_2014, place={Cambridge}, title={Type Theory and Formal Proof: An Introduction}, DOI={10.1017/CBO9781139567725}, publisher={Cambridge University Press}, author={Nederpelt, Rob and Geuvers, Herman}, year={2014}}
