--- a/main.tex
+++ b/main.tex
@@ -69,6 +69,7 @@
 %\subimport{includes/chapters/}{pure_type_systems.tex}
 %\subimport{includes/chapters/}{ipc.tex}
 \subimport{includes/chapters/}{simple_types2.tex}
+%\subimport{includes/chapters/}{simpletypes.tex}
 %\subimport{includes/chapters/}{denotational_semantics.tex}
 %\bibliographystyle{alpha}
 
