--- a/main.tex
+++ b/main.tex
@@ -64,6 +64,9 @@
 %\author{Rafał Szczerski} 
 
 \begin{document}
+\tableofcontents
+\newpage
+
 %\maketitle
 \subimport{includes/chapters/}{untyped.tex}
 %\subimport{includes/chapters/}{pure_type_systems.tex}
