--- a/bibdb.bib
+++ b/bibdb.bib
@@ -284,3 +284,14 @@ number = "1-3",
 }
 
 @book{nederpelt_geuvers_2014, place={Cambridge}, title={Type Theory and Formal Proof: An Introduction}, DOI={10.1017/CBO9781139567725}, publisher={Cambridge University Press}, author={Nederpelt, Rob and Geuvers, Herman}, year={2014}}
+
+@book{Girard:1989:PT:64805,
+ author = {Girard, Jean-Yves and Taylor, Paul and Lafont, Yves},
+ title = {Proofs and Types},
+ year = {1989},
+ isbn = {0-521-37181-3},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
+
+
