--- a/main.tex
+++ b/main.tex
@@ -44,6 +44,7 @@
 \usepackage{wrapfig}
 \usepackage{subfig}
 \usepackage{stmaryrd}
+\usepackage{fitch}
 %\usepackage{cite}
 
 \DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
