--- a/bibdb.bib
+++ b/bibdb.bib
@@ -295,4 +295,12 @@ number = "1-3",
  address = {New York, NY, USA},
 } 
 
-
+@article{Lof_96,
+author = {Martin Lof, P},
+year = {1996},
+month = {01},
+pages = {},
+title = {On the Meanings of the Logical Constants and the Justifications of the Logical Laws},
+volume = {1},
+journal = {Nordic Journal of Philosophical Logic}
+}
