--- a/main.tex
+++ b/main.tex
@@ -45,6 +45,7 @@
 \usepackage{subfig}
 \usepackage{stmaryrd}
 \usepackage{fitch}
+\usepackage{epigraph}
 %\usepackage{cite}
 
 \DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
@@ -69,6 +70,7 @@
 \newpage
 
 %\maketitle
+\subimport{includes/chapters/}{intro.tex}
 \subimport{includes/chapters/}{untyped.tex}
 %\subimport{includes/chapters/}{pure_type_systems.tex}
 %\subimport{includes/chapters/}{ipc.tex}
