Some trivial type derivation examples

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -304,3 +304,10 @@ title = {On the Meanings of the Logical Constants and the Justifications of the 
 volume = {1},
 journal = {Nordic Journal of Philosophical Logic}
 }
+
+@book{Wittgenstein53,
+	title = {Philosophical Investigations},
+	year = {1953},
+	author = {Ludwig Wittgenstein},
+	publisher = {Wiley-Blackwell}
+}
