--- a/includes/def.tex
+++ b/includes/def.tex
@@ -15,6 +15,7 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
 \newtheorem{twierdzenie}{Twierdzenie}
 \newtheorem{lemat}{Lemat}
 \newtheorem{fakt}{Fakt}
+\newtheorem*{wniosek*}{Wniosek}
 \newtheorem{wniosek}{Wniosek}
 \theoremstyle{remark}
 \newtheorem{uwaga}{Uwaga}
