--- a/main.tex
+++ b/main.tex
@@ -46,6 +46,8 @@
 \usepackage{stmaryrd}
 \usepackage{fitch}
 \usepackage{epigraph}
+\usepackage[hidelinks]{hyperref}
+
 %\usepackage{cite}
 
 \DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
