--- a/main.tex
+++ b/main.tex
@@ -47,10 +47,9 @@
 \usepackage{fitch}
 \usepackage{epigraph}
 \usepackage[hidelinks]{hyperref}
-
 %\usepackage{cite}
 
-\DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
+%\DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
 % \usepackage{listings}
 % \lstset{
 %   basicstyle=\itshape,
