--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
+\usepackage{amsfonts}
 \usepackage
 [
     backend=biber,
