--- a/bibdb.bib
+++ b/bibdb.bib
@@ -311,3 +311,42 @@ journal = {Nordic Journal of Philosophical Logic}
 	author = {Ludwig Wittgenstein},
 	publisher = {Wiley-Blackwell}
 }
+
+@article{Strachey2000,
+ author = {Strachey, Christopher},
+ title = {Fundamental Concepts in Programming Languages},
+ journal = {Higher Order Symbol. Comput.},
+ issue_date = {April 2000},
+ volume = {13},
+ number = {1-2},
+ month = apr,
+ year = {2000},
+ issn = {1388-3690},
+ pages = {11--49},
+ numpages = {39},
+ url = {https://doi.org/10.1023/A:1010000313106},
+ doi = {10.1023/A:1010000313106},
+ acmid = {609208},
+ publisher = {Kluwer Academic Publishers},
+ address = {Norwell, MA, USA},
+ keywords = {CPL, L-values, R-values, ad hoc polymorphism, binding mechanisms, foundations of computing, functions as data, parameter passing, parametric polymorphism, programming languages, semantics, type completeness, variable binding},
+} 
+
+@article{Cardelli1985,
+ author = {Cardelli, Luca and Wegner, Peter},
+ title = {On Understanding Types, Data Abstraction, and Polymorphism},
+ journal = {ACM Comput. Surv.},
+ issue_date = {Dec. 1985},
+ volume = {17},
+ number = {4},
+ month = dec,
+ year = {1985},
+ issn = {0360-0300},
+ pages = {471--523},
+ numpages = {53},
+ url = {http://doi.acm.org/10.1145/6041.6042},
+ doi = {10.1145/6041.6042},
+ acmid = {6042},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
