--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,8 @@
 \documentclass[a4paper,oneside,reqno,12pt]{article}
 %\usepackage[a4paper,left=4cm,right=3cm,top=3cm,bottom=3cm,head=0cm,headsep=0cm]{geometry}
-\usepackage[utf8]{inputenc}
-\usepackage[T1]{fontenc}
+%\usepackage[utf8]{inputenc}
+%\usepackage[T1]{fontenc}
+%\usepackage{fontspec}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage
@@ -14,6 +15,7 @@
 \usepackage{amssymb}
 \usepackage{amsthm}
 \usepackage{ebproof}
+\usepackage{graphics}
 \usepackage{graphicx}
 \usepackage{epstopdf}
 \usepackage{inputenc}
@@ -48,6 +50,9 @@
 \usepackage{fitch}
 \usepackage{epigraph}
 \usepackage[hidelinks]{hyperref}
+\usepackage{pstricks,pst-node,pst-tree}
+\usepackage{pst-plot}
+\usepackage{pstricks-add}
 %\usepackage{cite}
 
 %\DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
