--- a/bibdb.bib
+++ b/bibdb.bib
@@ -187,7 +187,25 @@ abstract = "A definition of simultaneous substitution for the lambda calculus is
  publisher = {Cambridge University Press},
  address = {New York, NY, USA},
 } 
-i@article{hinze_2005, title={THEORETICAL PEARL Church numerals, twice!}, volume={15}, DOI={10.1017/S0956796804005313}, number={1}, journal={Journal of Functional Programming}, publisher={Cambridge University Press}, author={HINZE, RALF}, year={2005}, pages={1–13}}
+
+@article{hinze_2005,
+ author = {Hinze, Ralf},
+ title = {THEORETICAL PEARL Church Numerals, Twice!},
+ journal = {J. Funct. Program.},
+ issue_date = {January 2005},
+ volume = {15},
+ number = {1},
+ month = jan,
+ year = {2005},
+ issn = {0956-7968},
+ pages = {1--13},
+ numpages = {13},
+ url = {http://dx.doi.org/10.1017/S0956796804005313},
+ doi = {10.1017/S0956796804005313},
+ acmid = {1037121},
+ publisher = {Cambridge University Press},
+ address = {New York, NY, USA},
+} 
 
 @book{Church1941-CHUTCO-7,
 	author = {Alonzo Church},
