--- a/main.tex
+++ b/main.tex
@@ -78,14 +78,17 @@
 
 %\maketitle
 \subimport{includes/chapters/}{intro.tex}
+\newpage
 \subimport{includes/chapters/}{untyped.tex}
+\newpage
 %\subimport{includes/chapters/}{pure_type_systems.tex}
 %\subimport{includes/chapters/}{ipc.tex}
 \subimport{includes/chapters/}{simple_types2.tex}
+\newpage
 \subimport{includes/chapters/}{lambda2.tex}
 %\subimport{includes/chapters/}{simpletypes.tex}
 %\subimport{includes/chapters/}{denotational_semantics.tex}
 %\bibliographystyle{alpha}
-
+\newpage
 \printbibliography[title=Literatura]	
 \end{document}
