--- a/bibdb.bib
+++ b/bibdb.bib
@@ -387,3 +387,30 @@ journal = {Nordic Journal of Philosophical Logic}
  keywords = {advanced type features, typed intermediate language},
 } 
 
+@Article{jones1992implementing,                                                
+author = {Jones, Peyton and L, Simon and Peyton Jones, Simon},                 
+title = {Implementing Lazy Functional Languages on Stock Hardware: The Spineless Tagless G-machine},
+year = {1992},                                                                 
+month = {July},                                                                
+abstract = {The Spineless Tagless G-machine is an abstract machine designed to support non- strict higher-order functional languages. This presentation of the machine falls into three parts. Firstly, we give a general discussion of the design issues involved in implementing non-strict functional languages.^M
+Next, we present the STG language, an austere but recognisably-functional language, which as well as a denotational meaning has a well-defined operational semantics. The STG language is the \abstract machine code" for the Spineless Tagless G-machine.^M
+Lastly, we discuss the mapping of the STG language onto stock hardware. The success of an abstract machine model depends largely on how efficient this mapping can be made, though this topic is often relegated to a short section. Instead, we give a detailed discussion of the design issues and the choices we have made. Our principal target is the C language, treating the C compiler as a portable assembler.},
+publisher = {Cambridge University Press},                                      
+url = {https://www.microsoft.com/en-us/research/publication/implementing-lazy-functional-languages-on-stock-hardware-the-spineless-tagless-g-machine/},
+pages = {127-202},                                                             
+journal = {Journal of Functional Programming},                                 
+volume = {2},                                                                  
+edition = {Journal of Functional Programming},                                 
+} 
+
+@book{parallel_graph_rewriting,
+   title =     {Functional Programming and Parallel Graph Rewriting},
+   author =    {Rinus Plasmeijer, Marko van Eekelen},
+   publisher = {Addison-Wesley},
+   isbn =      {0471935670},
+   year =      {1993},
+   series =    {},
+   edition =   {},
+   volume =    {},
+   url = {https://clean.cs.ru.nl/Functional_Programming_and_Parallel_Graph_Rewriting}
+}
