--- a/includes/def.tex
+++ b/includes/def.tex
@@ -43,4 +43,4 @@ Style2*=$\bullet$ ,Style3*=$\circ$ ,Style4*=\tiny$\blacksquare$ )
   {\renewcommand\theinnercustomdef{#1}\innercustomdef}
   {\endinnercustomdef}
 
-
+\newcommand\setItemnumber[1]{\setcounter{enumi}{\numexpr#1-1\relax}}
