--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,7 @@
 \usepackage{pstricks,pst-node,pst-tree}
 \usepackage{pst-plot}
 \usepackage{pstricks-add}
+\usepackage{moreenum}
 %\usepackage{cite}
 
 %\DeclareSymbolFontAlphabet{\amsmathbb}{AMSb}%
