Def. 4' moved up

--- a/bibdb.bib
+++ b/bibdb.bib
@@ -414,3 +414,28 @@ edition = {Journal of Functional Programming},
    volume =    {},
    url = {https://clean.cs.ru.nl/Functional_Programming_and_Parallel_Graph_Rewriting}
 }
+
+@book{Lloyd2003,
+  doi = {10.1007/978-3-662-08406-9},
+  url = {https://doi.org/10.1007/978-3-662-08406-9},
+  year = {2003},
+  publisher = {Springer Berlin Heidelberg},
+  author = {J. W. Lloyd},
+  title = {Logic for Learning}
+}
+
+
+
+@article{DBLP:journals/corr/abs-0804-3434,
+  author    = {Peter Selinger},
+  title     = {Lecture notes on the lambda calculus},
+  journal   = {CoRR},
+  volume    = {abs/0804.3434},
+  year      = {2008},
+  url       = {http://arxiv.org/abs/0804.3434},
+  archivePrefix = {arXiv},
+  eprint    = {0804.3434},
+  timestamp = {Mon, 13 Aug 2018 16:48:04 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/abs-0804-3434},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
