Before pushing through one-letter-avoiding script

--- a/abstract.tex
+++ b/abstract.tex
@@ -1,10 +1,20 @@
-%\thispagestyle{empty}
-%%\setcounter{page}{2} 
-%\tableofcontents
+\paragraph{Streszczenie}
+Celem tej pracy jest wyłożenie minimalnych podstaw teoretycznych
+koniecznych do zrozumienia technik programowania funkcyjnego
+z perspektywy matematycznej. Na gruncie rachunku \(\lambda\) bez typów,
+poza składnią i semantyką oraz podstawowymi własnościami tego systemu,
+omówione zostaną strategie obliczania wyrażeń oraz algebraiczne
+typy danych. Omawiamy rozszerzenie rachunku \(\lambda\)  najpierw o typy proste,
+a następnie o typy parametryczne celem wyjasnienia procesu kompilacji
+programów w języku Haskell do języka pośredniego opartego na 
+systemie Girarda/Reynoldsa.
 
-%\chapter*{Streszczenie}
-%\addcontentsline{toc}{chapter}{Streszczenie}  
-
-%\newpage
-%\chapter*{Abstract}
-%\addcontentsline{toc}{chapter}{Abstract}  
+\paragraph{Abstract}
+The aim of this thesis is to provide minimal theoretical foundations
+necessary to understand functional programming techniques from the
+mathematical point of view. Starting form untyped \(\lambda\)-calculus,
+besides its syntax, semantics and elementary proporties, we discuss
+evaluation strategies and algebraic data types. We extend \(\lambda\)-calculus
+with simple types and then with parametric types in order to demonstrate
+the process of compilation Haskell programs to its intermediate language,
+which is based on Girard/Reynolds system.
