One-letter-words avoiding

--- a/abstract.tex
+++ b/abstract.tex
@@ -12,7 +12,7 @@ systemie Girarda/Reynoldsa.
 \paragraph{Abstract}
 The aim of this thesis is to provide minimal theoretical foundations
 necessary to understand functional programming techniques from the
-mathematical point of view. Starting form untyped \(\lambda\)-calculus,
+mathematical perspective. Starting form untyped \(\lambda\)-calculus,
 besides its syntax, semantics and elementary proporties, we discuss
 evaluation strategies and algebraic data types. We extend \(\lambda\)-calculus
 with simple types and then with parametric types in order to demonstrate
